---
config:
  layout: elk
  look: neo
  theme: default
---
classDiagram
direction LR
    class Place {
	    - String: id_place
	    +String: title
	    +String: description
	    +float: price
	    +tuple: longitude
	    +list: Ammenities
	    create(id_place)
	    update(id_place)
	    delete()
    }
    class Amenity {
	    -String: id_amenity
	    +String: name
	    +String: description
	    create(id_amenity)
	    update(id_amenity)
	    delete()
    }
    class User {
	    -String: id_user
	    -bool: is_admin
	    +String: first_name
	    -String: last_name
	    -String: email
	    -String: password
	    create(id_user)
	    update(id_user)
	    delete()
    }
    class Review {
	    -String: id_entity
	    +int: rating
	    +String: comment
    }
    class BaseModel {
	    +datetime: creation_date*
	    +datetime: update_date*
	    create()*
	    update()*
	    delete()*
    }

    Review "1" --> "1" User : author
    Review "1" --* "1" Place : reviews
    Place "1" o-- "*" Amenity : has
    User "1" *-- "0..*" Place : owns
    BaseModel --|> User
    BaseModel --|> Place
    BaseModel --|> Amenity
    BaseModel --|> Review
